Add dedicated Deep Dive section with expanded internals.
Covers Java (HashMap, JVM/GC, JMM, class loading), Spring (proxies,
JPA session, auto-config), and Kafka (log segments, rebalance, EOS,
outbox) with TOC links and cross-references from Q&A sections.

Co-authored-by: Cursor <cursoragent@cursor.com>